nonPH_analysis/CCA/dimensional_stability/logs/archives/dimstbl_848276.err
Traceback (most recent call last):
  File "/scratch/tyoeasley/brain_representations/src_py/run_lindecomp_dimstab.py", line 8, in <module>
    import pull_cancorrs
  File "/mnt/beegfs/scratch/tyoeasley/brain_representations/src_py/pull_cancorrs.py", line 51
    varin_names = [i for i in in varnames_all if ".CCA_res" in i]
                               ^
SyntaxError: invalid syntax
